<resources>
    <string name="app_name">IPetChat</string>
    <string name="asyncHttpRequest_progressDialog_message">Processing, please waiting&#8230;</string>
    <string name="title_activity_account_setting4first" translatable="false">AccountSetting4FirstActivity</string>
    <string name="as4f_appIcon_imageView_contentDescription" translatable="false">application icon image view</string>
    <string name="as4f_accountRegister_button_title">Register</string>
    <string name="as4f_accountLogin_button_title">Login</string>
    <string name="getPhoneVerificationCode_step_textView_text">Step1</string>
    <string name="getPhoneVerificationCodeStep_description">Input phone number to retrieve verification code</string>
    <string name="getPhoneVerificationCode_phone_editText_hint">Input phone number</string>
    <string name="getPhoneVerificationCode_button_title">Get Verification Code</string>
    <string name="getPhoneVerificationCodeStep_comment">(Your phone number is used for authentication only, we assure that we won\'t send junk message to you.)</string>
    <string name="verifyVerificationCode_step_textView_text">Step2</string>
    <string name="verifyVerificationCodeStep_description">Input verification code and press \'Next\' to verify</string>
    <string name="verifyVerificationCode_verificationCode_editText_hint">Input verification code</string>
    <string name="verifyVerificationCode_button_title">Next</string>
    <string name="accountRegister_or_resetPwd_step_textView_text">Step3</string>
    <string name="title_activity_account_register" translatable="false">AccountRegisterActivity</string>
    <string name="account_register_nav_title">Account Register</string>
    <string name="ar_finishRegisterStep_description">Input password and confirmation to finish the register</string>
    <string name="ar_finishRegister_password_editText_hint">Input password</string>
    <string name="ar_finishRegister_confirmationPwd_editText_hint">Input confirmation password</string>
    <string name="ar_finishRegister_button_title">Finish Register</string>
    <string name="title_activity_account_login" translatable="false">AccountLoginActivity</string>
    <string name="account_login_nav_title">Account Login</string>
    <string name="al_username_editText_hint">Please input your registered phone number</string>
    <string name="al_loginPwd_editText_hint">Please input the account password</string>
    <string name="al_forgetLoginPwd_button_title">Forget Pwd</string>
    <string name="al_confirmLogin_button_title">Login</string>
    <string name="thirdPartyOAuthLogin_sinaWeiboOAuth_appKey" translatable="false">3809471856</string>
    <string name="thirdPartyOAuthLogin_sinaWeiboOAuth_redirectUrl" translatable="false">https://api.weibo.com/oauth2/default.html</string>
    <string name="thirdPartyOAuthLogin_sinaWeiboOAuth_scope" translatable="false">email</string>
    <string name="thirdPartyOAuthLogin_qqConnectOAuth_appId" translatable="false">100585565</string>
    <string name="thirdPartyOAuthLogin_qqConnectOAuth_scope" translatable="false">get_simple_userinfo</string>
    <string name="thirdPartyOAuthLogin_qqConnectOAuth_respJson_result" translatable="false">ret</string>
    <string name="thirdPartyOAuthLogin_qqConnectOAuth_respJson_openId" translatable="false">openid</string>
    <string name="thirdPartyOAuthLogin_qqConnectOAuth_respJson_accessToken" translatable="false">access_token</string>
    <string name="thirdPartyOAuthLogin_qqConnectOAuth_respJson_message" translatable="false">msg</string>
    <string name="title_activity_account_retrieve_pwd" translatable="false">AccountRetrievePwdActivity</string>
    <string name="account_retrieve_password_nav_title">Retrieve password</string>
    <string name="arp_finishResetPwdStep_description">Input new password and confirmation to finish reset your password</string>
    <string name="arp_finishResetPwd_newPwd_editText_hint">Input new password</string>
    <string name="arp_finishResetPwd_newConfirmationPwd_editText_hint">Input new confirmation password</string>
    <string name="arp_finishResetPwd_button_title">Finish Reset</string>
    <string name="title_activity_ipet_chat_tab" translatable="false">IPetChatTabActivity</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="golden_retriever">Golden Retriever</string>
    <string name="husky">Husky</string>
    <string name="teddy">Teddy</string>
    <string name="samoyed">Samoyed</string>
    <string name="pomeranian">Pomeranian</string>
    <string name="schnauzer">Schnauzer</string>
    <string name="rough_collie">Rough Collie</string>
    <string name="chow">Chow</string>
    <string name="pekingese">Pekingese</string>
    <string name="others_pet">Others</string>
    <string name="title_activity_home_tab_content" translatable="false">HomeTabContentActivity</string>
    <string name="home_tab_tag" translatable="false">sego pet home tab</string>
    <string name="home_tab_title">Home</string>
    <string name="home_nav_title">Sego Pet</string>
    <string name="pet_avatar_imageview_contentdescription" translatable="false">pet avatar image view</string>
    <string name="pet_sex_imageview_contentdescription" translatable="false">pet sex image view</string>
    <string name="pet_breed_prefix">Breed: </string>
    <string name="pet_age_prefix">Age: </string>
    <string name="pet_age_format">Age: %d months</string>
    <string name="pet_height_prefix">Height: </string>
    <string name="pet_height_format">Height: %.2fcm</string>
    <string name="pet_weight_prefix">Weight: </string>
    <string name="pet_weight_format">Weight: %.2fkg</string>
    <string name="pet_district_prefix">District: </string>
    <string name="pet_placeUsed2Go_prefix">Place used to go: </string>
    <string name="pet_location_button_title">Location</string>
    <string name="pet_info_button_title">Info</string>
    <string name="title_activity_pet_location" translatable="false">PetLocationActivity</string>
    <string name="pet_location_nav_title_format">%s location</string>
    <string name="title_activity_sports_health_tab_content" translatable="false">SportsHealthTabContentActivity</string>
    <string name="sports_and_health_tab_tag" translatable="false">sports and health tab</string>
    <string name="sports_and_health_tab7nav_title">SportsHealth</string>
    <string name="pet_breed_label">Breed</string>
    <string name="pet_age_label">Age</string>
    <string name="pet_age_value_format">%d months</string>
    <string name="pet_height_label">Height</string>
    <string name="pet_height_value_format">%.2fcm</string>
    <string name="pet_weight_label">Weight</string>
    <string name="pet_weight_value_format">%.2fkg</string>
    <string name="pet_sportsinfo_today_segment_title">Today</string>
    <string name="pet_sportsinfo_history_segment_title">History</string>
    <string name="pet_sportsinfo_rest_tip">Rest</string>
    <string name="pet_sportsinfo_walk_tip">Walk</string>
    <string name="pet_sportsinfo_run_tip">Run</string>
    <string name="pet_sportsinfo_strenuousExercise_tip">Strenuous Exercise</string>
    <string name="title_activity_community_tab_content" translatable="false">CommunityTabContentActivity</string>
    <string name="community_tab_tag" translatable="false">community tab</string>
    <string name="community_tab7nav_title">Community</string>
    <string name="pet_community_info_item_icon_imageview_contentdescription" translatable="false">pet community info item icon image view</string>
    <string name="pet_community_info_item_detailindicator_imageview_contentdescription" translatable="false">pet community info item detail indicator image view</string>
    <string name="petStars_community_item_title">Pet stars</string>
    <string name="petsNearby_community_item_title">Pets nearby</string>
    <string name="myConcern_community_item_title">Concern</string>
    <string name="messagebox_community_item_title">Message box</string>
    <string name="pet_mood_textview_tag" translatable="false">101</string>
    <string name="title_activity_pet_stars" translatable="false">PetStarsActivity</string>
    <string name="petstars_nav_title">Pet Stars</string>
    <string name="petstar_avatar_imageview_contentdescription" translatable="false">pet star avatar image view</string>
    <string name="petstar_detail_button_title">more</string>
    <string name="title_activity_pets_nearby" translatable="false">PetsNearbyActivity</string>
    <string name="pets_nearby_nav_title">Pets nearby</string>
    <string name="pet_nearby_avatar_imageview_contentdescription" translatable="false">pet nearby avatar image view</string>
    <string name="pet_nearby_sex_imageview_contentdescription" translatable="false">pet nearby sex image view</string>
    <string name="pet_nearby_distance_format">Within %dm</string>
    <string name="pet_nearby_detailindicator_imageview_contentdescription" translatable="false">pet nearby detail indicator image view</string>
    <string name="title_activity_my_concern" translatable="false">MyConcernActivity</string>
    <string name="my_concern_nav_title">My concern</string>
    <string name="my_concern_pet_search_editText_hint">search with name or phonetics</string>
    <string name="my_concern_pet_avatar_imageview_contentdescription" translatable="false">my concern pet avatar image view</string>
    <string name="my_concern_pet_sex_imageview_contentdescription" translatable="false">my concern pet image view</string>
    <string name="add_new_concern_pet_button_title">Add</string>
    <string name="pet_profile_beijing_district_text">Beijing</string>
    <string name="pet_profile_shanghai_district_text">Shanghai</string>
    <string name="pet_profile_tianjin_district_text">Tianjin</string>
    <string name="pet_profile_chongqing_district_text">Chongqing</string>
    <string name="pet_profile_zhejiang_district_text">Zhejiang</string>
    <string name="pet_profile_guangdong_district_text">Guangdong</string>
    <string name="pet_profile_jiangsu_district_text">Jiangsu</string>
    <string name="pet_profile_shandong_district_text">Shandong</string>
    <string name="pet_profile_fujian_district_text">Fujian</string>
    <string name="pet_profile_anhui_district_text">Anhui</string>
    <string name="pet_profile_sichuan_district_text">Sichuan</string>
    <string name="pet_profile_hubei_district_text">Hubei</string>
    <string name="pet_profile_hebei_district_text">Hebei</string>
    <string name="pet_profile_yunnan_district_text">Yunnan</string>
    <string name="pet_profile_heilongjiang_district_text">Heilongjiang</string>
    <string name="pet_profile_jilin_district_text">Jilin</string>
    <string name="pet_profile_liaoning_district_text">Liaoning</string>
    <string name="pet_profile_hainan_district_text">Hainan</string>
    <string name="pet_profile_hunan_district_text">Hunan</string>
    <string name="pet_profile_henan_district_text">Henan</string>
    <string name="pet_profile_guizhou_district_text">Guizhou</string>
    <string name="pet_profile_jiangxi_district_text">Jiangxi</string>
    <string name="pet_profile_guangxi_district_text">Guangxi</string>
    <string name="pet_profile_shanxi1_district_text">Shanxi</string>
    <string name="pet_profile_shanxi2_district_text">Shanxi</string>
    <string name="pet_profile_qinghai_district_text">Qinghai</string>
    <string name="pet_profile_ningxia_district_text">Ningxia</string>
    <string name="pet_profile_gansu_district_text">Gansu</string>
    <string name="pet_profile_xizang_district_text">Xizang</string>
    <string name="pet_profile_neimenggu_district_text">Neimenggu</string>
    <string name="pet_profile_xinjiang_district_text">Xinjiang</string>
    <string name="pet_profile_taiwan_district_text">Taiwan</string>
    <string name="pet_profile_macau_district_text">Macau</string>
    <string name="pet_profile_custom_district_text">Custom</string>
</resources>