<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ipetchat="http://schemas.android.com/apk/res/com.segotech.ipetchat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.AccountRegisterActivity" >

    <include
        android:id="@+id/ar_getPhoneVerificationCodeStep_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/get_phone_verification_code_layout" />

    <ViewStub
        android:id="@+id/ar_verifyVerificationCodeStep_viewStub"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout="@layout/verify_verification_code_layout" />

    <com.segotech.ipetchat.customwidget.AccountReg6ResetPwdViewStub
        android:id="@+id/ar_finishRegisterStep_viewStub"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        ipetchat:buttonTitle="@string/ar_finishRegister_button_title"
        ipetchat:description="@string/ar_finishRegisterStep_description"
        ipetchat:passwordEditText1Hint="@string/ar_finishRegister_password_editText_hint"
        ipetchat:passwordEditText2Hint="@string/ar_finishRegister_confirmationPwd_editText_hint" />

</FrameLayout>