<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_light_light_gray"
    tools:context=".account.AccountLoginActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/account_login_form_bg"
        android:orientation="vertical"
        android:paddingBottom="55dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp" >

        <EditText
            android:id="@+id/al_username_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_edittext_bg"
            android:ellipsize="end"
            android:hint="@string/al_username_editText_hint"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/al_loginPwd_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/common_edittext_bg"
            android:ellipsize="end"
            android:hint="@string/al_loginPwd_editText_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/al_forgetLoginPwd_button"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/al_forgetLoginPwd_button_title"
            android:textColor="@color/cyan_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/al_confirmLogin_button"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/plane_gray_btn_bg"
            android:text="@string/al_confirmLogin_button_title"
            android:textColor="@android:color/white" />
    </LinearLayout>

</FrameLayout>